--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -3,7 +3,7 @@
     <span class="emoji wave-hand animated"></span>
   </h1>
 
-  <h2 class="intro__tagline">I'm
+  <h2 class="intro__tagline">TEST UPDATE! I'm
     <span class="name">Brittany Chiang</span>, a design-minded front-end software engineer focused on building beautiful interfaces &amp; experiences
     <span class="emoji technologist"></span>
   </h2>
