--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -10,6 +10,7 @@
           </div>
           <div class="job__time">{{job.time}}</div>
         </div>
+        <div class="job__time2">{{job.position2}}</div>
         <div class="job__position">{{job.position}}</div>
       </div>
       {% endfor %}
