--- a/_scss/partials/_base.scss
+++ b/_scss/partials/_base.scss
@@ -46,6 +46,7 @@ body {
     .intro,
     .skills .skillz__category__label,
     .experience .job__time,
+    .experience .job__time2,
     .footer__copyright,
     .status {
       color: $off-white;
