--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -9,6 +9,7 @@
             <a href="{{job.url}}" target="_blank">{{job.company}}</a>
           </div>
           <div class="job__time">{{job.time}}</div>
+          <div class="job__time2">{{job.position2}}</div>
         </div>
         <div class="job__position">{{job.position}}</div>
       </div>
