--- a/_includes/academics.html
+++ b/_includes/academics.html
@@ -1,5 +1,5 @@
-<section class="section experience">
-  <div class="section__title">Experience</div>
+<section class="section academics">
+  <div class="section__title">Academics</div>
   <div class="section__content">
     <div class="subjects">
       {% for subject in site.data.grades %}
