--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -4,7 +4,7 @@
 @import 'partials/switch';
 @import 'partials/intro';
 @import 'partials/skills';
-@import 'partials/experience';
+@import 'partials/academics';
 @import 'partials/employment-status';
 @import 'partials/featured-projects';
 @import 'partials/other-projects';
