--- a/_scss/partials/_base.scss
+++ b/_scss/partials/_base.scss
@@ -45,8 +45,8 @@ body {
     strong,
     .intro,
     .skills .skillz__category__label,
-    .experience .subject__grade10,
-    .experience .subject__grade11,
+    .academics .subject__grade10,
+    .academics .subject__grade11,
     .footer__copyright,
     .status {
       color: $off-white;
