Update first two sections

--- a/_includes/background.html
+++ b/_includes/background.html
@@ -1,4 +1,4 @@
-<section class="section background">
+<!-- <section class="section background">
   <div class="section__title">Background</div>
   <div class="section__content">
     <p>
@@ -21,6 +21,35 @@
       or crossing off another item on my bucket list.
     </p>
 
-    <!-- {% include employment-status.html %} -->
+  </div>
+</section> -->
+
+<section class="section background">
+  <div class="section__title">Background</div>
+  <div class="section__content">
+    <p>
+      I'm currently a senior student at
+      <strong>Omar Bin Al-Khattab highschool</strong> finishing off a journey of 12 years with some awesome people. 
+    </p>
+    <p>
+      In the mix of 
+      <strong>Computer Science</strong> and <strong>Filmmaking</strong>, I love soaking up knowledge and often land top grades. 
+    </p>
+    <p>
+      I'm not just about coding; I dig into filmmaking, storytelling, and critiquing. I'm friendly but also a bit picky when it comes to my work. Team projects light me up, making tough stuff way easier. Whether coding or storytelling, I'm always curious, asking why and how. 
+    </p>
+    <p>
+      Learning isn't just a skill; it's a habit, even in video games.    
+    </p>
+    <p>
+      My big aim? Turn what I learn into a positive contribution for a better world.
+    </p>
+
+    <p>
+      <strong>When I'm not in front of a computer screen, I'm writing, directing, and filming my ideas.</strong>
+    </p>
+
+    <!-- <a href="{{site.resume}}" target="_blank" class="arrow-link">View My Resume</a> -->
+
   </div>
 </section>
