--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -3,8 +3,8 @@
     <span class="emoji wave-hand animated"></span>
   </h1>
 
-  <h2 class="intro__tagline">TEST UPDATE! I'm
-    <span class="name">Brittany Chiang</span>, a design-minded front-end software engineer focused on building beautiful interfaces &amp; experiences
+  <h2 class="intro__tagline">I'm
+    <span class="name">Obai Anaya</span>, a film-loving programmer, coding by day, &amp; filming by dusk
     <span class="emoji technologist"></span>
   </h2>
 
@@ -12,7 +12,7 @@
     <span>Get in touch </span>
     <span class="emoji pointer"></span>
     <span>
-      <a href="mailto:brittany.chiang@gmail.com" target="_blank" class="highlight-link">brittany.chiang@gmail.com</a>
+      <a href="mailto:obai.anayeh@gmail.com" target="_blank" class="highlight-link">obai.anayeh@gmail.com</a>
     </span>
   </h3>
 </header>
