Replace skills with honors

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -3,9 +3,8 @@
 @import 'partials/base';
 @import 'partials/switch';
 @import 'partials/intro';
-@import 'partials/skills';
 @import 'partials/academics';
-@import 'partials/employment-status';
+@import 'partials/academics-cert';
 @import 'partials/featured-projects';
 @import 'partials/other-projects';
 @import 'partials/footer';
