--- a/_scss/partials/_academics-cert.scss
+++ b/_scss/partials/_academics-cert.scss
@@ -2,7 +2,7 @@
   a:after {
     display: none;
   }
-  .project {
+  .honors {
     display: flex;
     margin-bottom: 100px;
     margin-left: -5%;
@@ -18,7 +18,7 @@
       display: block;
       margin-bottom: 70px;
     }
-    &.screentime {
+    &.school {
       margin-bottom: 70px;
     }
     &:last-of-type {
@@ -31,12 +31,12 @@
       a {
         display: block;
       }
-      &.phones {
+      &.certs {
         a {
           display: flex;
           justify-content: space-between;
         }
-        .phone {
+        .cert {
           margin: 0 -7%;
           &:first-of-type {
             margin-left: -5%;
