--- a/_includes/academics-cert.html
+++ b/_includes/academics-cert.html
@@ -2,26 +2,46 @@
   <div class="section__title">Honors</div>
   <div class="section__content">
 
-    <div class="project screentime">
-      <figure class="project__pic phones">
+    <div class="honors school">
+      <figure class="honors__pic certs">
         <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">
-          <div class="phone">
-            <img src="{{site.baseurl}}/img/featured/screentime/screentime1.png" alt="">
+          <div class="cert">
+            <img src="{{site.baseurl}}/img/honors/honors/Grade10.pdf" alt="">
           </div>
-          <div class="phone">
-            <img src="{{site.baseurl}}/img/featured/screentime/screentime3.png" alt="">
-          </div>
-          <div class="phone">
-            <img src="{{site.baseurl}}/img/featured/screentime/screentime4.png" alt="">
+          <div class="cert">
+            <img src="{{site.baseurl}}/img/honors/honors/Grade11.pdf" alt="">
           </div>
         </a>
       </figure>
-      <figcaption class="project__caption">
-        <div class="project__name">
+      <figcaption class="honors__caption">
+        <div class="honors__name">
           <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">ScreenTime 2.0</a>
         </div>
         <p>Starry Station feature that provided users with the ability to easily filter content, pause the internet, and even
-          create custom rules for blocking apps like Facebook and Twitter right from their phones.</p>
+          create custom rules for blocking apps like Facebook and Twitter right from their certs.</p>
+      </figcaption>
+    </div>
+
+    <div class="school_honors">
+      <figure class="honors__pic certs">
+        <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">
+          <div class="cert">
+            <img src="{{site.baseurl}}/img/honors/more/Generic.pdf" alt="">
+          </div>
+          <div class="cert">
+            <img src="{{site.baseurl}}/img/honors/more/LibraryBestVisitor.pdf" alt="">
+          </div>
+          <div class="cert">
+            <img src="{{site.baseurl}}/img/honors/more/VolunteerLibrary.pdf" alt="">
+          </div>
+        </a>
+      </figure>
+      <figcaption class="honors__caption">
+        <div class="honors__name">
+          <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">ScreenTime 2.0</a>
+        </div>
+        <p>Starry Station feature that provided users with the ability to easily filter content, pause the internet, and even
+          create custom rules for blocking apps like Facebook and Twitter right from their certs.</p>
       </figcaption>
     </div>
 
