--- a/_includes/academics-cert.html
+++ b/_includes/academics-cert.html
@@ -29,7 +29,7 @@
             <img src="{{site.baseurl}}/img/featured/screentime/screentime1.png" alt="">
           </div>
           <div class="cert">
-            <img src="{{site.baseurl}}/img/honors/more/LibraryBestVisitor.pdf" alt="">
+            <img src="{{site.baseurl}}/img/honors/honors/Grade11.png" alt="">
           </div>
           <div class="cert">
             <img src="{{site.baseurl}}/img/honors/more/VolunteerLibrary.pdf" alt="">
