--- a/_includes/academics-cert.html
+++ b/_includes/academics-cert.html
@@ -9,7 +9,7 @@
             <img src="{{site.baseurl}}/img/honors/honors/Grade10.png" alt="">
           </div>
           <div class="cert">
-            <img src="{{site.baseurl}}/img/featured/screentime/screentime1.pdf" alt="">
+            <img src="{{site.baseurl}}/img/honors/honors/Grade11.png" alt="">
           </div>
         </a>
       </figure>
@@ -26,13 +26,13 @@
       <figure class="honors__pic certs">
         <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">
           <div class="cert">
-            <img src="{{site.baseurl}}/img/featured/screentime/screentime1.png" alt="">
+            <img src="{{site.baseurl}}/img/honors/more/1.png" alt="">
           </div>
           <div class="cert">
-            <img src="{{site.baseurl}}/img/honors/honors/Grade11.png" alt="">
+            <img src="{{site.baseurl}}/img/honors/more/2.png" alt="">
           </div>
           <div class="cert">
-            <img src="{{site.baseurl}}/img/honors/more/VolunteerLibrary.pdf" alt="">
+            <img src="{{site.baseurl}}/img/honors/more/3.png" alt="">
           </div>
         </a>
       </figure>
