--- a/_includes/academics-cert.html
+++ b/_includes/academics-cert.html
@@ -50,11 +50,13 @@
     <div class="honors school">
       <figure class="honors__pic certs">
         <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">
-          <div class="cert">
-            <img src="{{site.baseurl}}/img/honors/honors/Grade10.png" alt="">
-          </div>
-          <div class="cert">
-            <img src="{{site.baseurl}}/img/honors/honors/Grade11.png" alt="">
+          <div class="row">
+            <div class="cert">
+              <img src="{{site.baseurl}}/img/honors/honors/Grade10.png" alt="">
+            </div>
+            <div class="cert">
+              <img src="{{site.baseurl}}/img/honors/honors/Grade11.png" alt="">
+            </div>
           </div>
         </a>
       </figure>
