--- a/_includes/featured-projects2.html
+++ b/_includes/featured-projects2.html
@@ -19,17 +19,12 @@
     <div class="project screentime">
       <figure class="project__pic phones">
         <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">
-          <div class="phone">
-              <marquee behavior="scroll" direction="left">
+              <div class="scroll-container">
             <img src="{{site.baseurl}}/img/honors/honors/Grade10.png" alt="">
-          </div>
-          <div class="phone">
+
             <img src="{{site.baseurl}}/img/honors/honors/Grade11.png" alt="">
-          </div>
-          <div class="phone">
             <img src="{{site.baseurl}}/img/featured/screentime/screentime4.png" alt="">
           </div>
-        </marquee>
         </a>
       </figure>
       <figcaption class="project__caption">
