--- a/_includes/academics.html
+++ b/_includes/academics.html
@@ -16,7 +16,28 @@
       </div>
       {% endfor %}
     </div>
-
+    <div class="project screentime">
+      <figure class="project__pic phones">
+        <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">
+          <div class="phone">
+            <img src="{{site.baseurl}}/img/featured/screentime/screentime1.png" alt="">
+          </div>
+          <div class="phone">
+            <img src="{{site.baseurl}}/img/featured/screentime/screentime3.png" alt="">
+          </div>
+          <div class="phone">
+            <img src="{{site.baseurl}}/img/featured/screentime/screentime4.png" alt="">
+          </div>
+        </a>
+      </figure>
+      <figcaption class="project__caption">
+        <div class="project__name">
+          <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">ScreenTime 2.0</a>
+        </div>
+        <p>Starry Station feature that provided users with the ability to easily filter content, pause the internet, and even
+          create custom rules for blocking apps like Facebook and Twitter right from their phones.</p>
+      </figcaption>
+    </div>
     <!-- <a href="{{site.resume}}" target="_blank" class="arrow-link">View My Resume</a> -->
   </div>
 </section>
