--- a/_scss/partials/_base.scss
+++ b/_scss/partials/_base.scss
@@ -44,6 +44,7 @@ body {
     a,
     strong,
     .intro,
+    .skills .skillz__category__label,
     .academics .subject__grade10,
     .academics .subject__grade11,
     .footer__copyright,
