Add three pages for all projects

--- a/_includes/featured-projects3.html
+++ b/_includes/featured-projects3.html
@@ -1,5 +1,5 @@
 <section class="section featured-projects">
-  <div class="section__title">Honors</div>
+  <div class="section__title">Filmmaking</div>
   <div class="section__content">
     <div class="project blistabloc">
       <figure class="project__pic">
@@ -20,10 +20,10 @@
       <figure class="project__pic phones">
         <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">
           <div class="phone">
-            <img src="{{site.baseurl}}/img/featured/screentime/screentime1.png" alt="">
+            <img src="{{site.baseurl}}/img/honors/honors/Grade10.png" alt="">
           </div>
           <div class="phone">
-            <img src="{{site.baseurl}}/img/featured/screentime/screentime3.png" alt="">
+            <img src="{{site.baseurl}}/img/honors/honors/Grade11.png" alt="">
           </div>
           <div class="phone">
             <img src="{{site.baseurl}}/img/featured/screentime/screentime4.png" alt="">
