--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -39,6 +39,29 @@
       </figcaption>
     </div>
 
+    <div class="project screentime">
+        <figure class="project__pic phones">
+          <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">
+            <div class="phone">
+              <img src="{{site.baseurl}}/img/honors/more/1.png" alt="">
+            </div>
+            <div class="phone">
+              <img src="{{site.baseurl}}/img/honors/more/2.png" alt="">
+            </div>
+            <div class="phone">
+              <img src="{{site.baseurl}}/img/honors/more/3.png" alt="">
+            </div>
+          </a>
+        </figure>
+        <figcaption class="project__caption">
+          <div class="project__name">
+            <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">ScreenTime 2.0</a>
+          </div>
+          <p>Starry Station feature that provided users with the ability to easily filter content, pause the internet, and even
+            create custom rules for blocking apps like Facebook and Twitter right from their phones.</p>
+        </figcaption>
+      </div>
+
     <div class="project interventions">
       <figure class="project__pic">
         <a href="https://interventions.design/" target="_blank">
