--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -9,7 +9,7 @@
               <img src="{{site.baseurl}}/img/honors/honors/Grade10.png" alt="">
           </div>
           <div class="phone">
-            <img src="{{site.baseurl}}/img/honors/honors/Grade110.png" alt="">
+            <img src="{{site.baseurl}}/img/honors/honors/Grade11.png" alt="">
           </div>
         </a>
       </figure>
@@ -17,8 +17,8 @@
         <div class="project__name">
           <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">Honors Certificates</a>
         </div>
-        <p>On the left is a Certificate of Excellency for achieving 97.12% in Grade 10, and on the right
-          is a Certificate of Excellency for achieving 99.44% in Grade 11.
+        <p>1- Certificate of Excellency for achieving <strong>97.12% in Grade 10</strong>, 2- and on the right
+          is a Certificate of Excellency for achieving <strong>99.44% in Grade 11</strong>.
         </p>
       </figcaption>
     </div>
@@ -33,7 +33,7 @@
               <img src="{{site.baseurl}}/img/honors/more/2.png" alt="">
             </div>
             <div class="phone">
-              <img src="{{site.baseurl}}/img/honors/more/30.png" alt="">
+              <img src="{{site.baseurl}}/img/honors/more/3.png" alt="">
             </div>
           </a>
         </figure>
