--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -17,8 +17,8 @@
         <div class="project__name">
           <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">Honors Certificates</a>
         </div>
-        <p>On the left is a Certificate of Excellency for achieving 97.12% in Grade 10, and on the right
-          is a Certificate of Excellency for achieving 99.44% in Grade 11.
+        <p>1- Certificate of Excellency for achieving <strong>97.12% in Grade 10</strong>, 2- and on the right
+          is a Certificate of Excellency for achieving <strong>99.44% in Grade 11</strong>.
         </p>
       </figcaption>
     </div>
