--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -4,34 +4,40 @@
 
     <div class="project screentime">
       <figure class="project__pic phones">
-        <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">
           <div class="phone">
+              <a href="https://obaianaya.github.io/img/honors/honors/Grade10.png" target="_blank">
               <img src="{{site.baseurl}}/img/honors/honors/Grade10.png" alt="">
+            </a>
           </div>
           <div class="phone">
+              <a href="https://obaianaya.github.io/img/honors/honors/Grade11.png" target="_blank">
             <img src="{{site.baseurl}}/img/honors/honors/Grade11.png" alt="">
+          </a>
           </div>
-        </a>
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
           <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">Honors Certificates</a>
         </div>
-        <p>1- Certificate of Excellency for achieving <strong>97.12% in Grade 10</strong>, 2- and on the right
-          is a Certificate of Excellency for achieving <strong>99.44% in Grade 11</strong>.
+        <p>1- Certificate of Excellency for achieving <strong>97.12% in Grade 10</strong>.
+        <br>2- and on the right is a Certificate of Excellency for achieving <strong>99.44% in Grade 11</strong>.
         </p>
       </figcaption>
     </div>
 
     <div class="project screentime">
         <figure class="project__pic phones">
-          <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">
+          <a href="https://obaianaya.github.io/img/honors/more/1.png" target="_blank">
             <div class="phone">
               <img src="{{site.baseurl}}/img/honors/more/1.png" alt="">
             </div>
+          </a>
+          <a href="https://obaianaya.github.io/img/honors/more/2.png" target="_blank">
             <div class="phone">
               <img src="{{site.baseurl}}/img/honors/more/2.png" alt="">
             </div>
+          </a>
+          <a href="https://obaianaya.github.io/img/honors/more/3.png" target="_blank">
             <div class="phone">
               <img src="{{site.baseurl}}/img/honors/more/3.png" alt="">
             </div>
