Add imgs for ML project

--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -27,17 +27,17 @@
 
     <div class="project screentime">
         <figure class="project__pic phones">
-          <a href="https://obaianaya.github.io/img/honors/more/1.png" target="_blank">
+          <a href="{{site.baseurl}}/img/honors/more/1.png" target="_blank">
             <div class="phone">
               <img src="{{site.baseurl}}/img/honors/more/1.png" alt="">
             </div>
           </a>
-          <a href="https://obaianaya.github.io/img/honors/more/2.png" target="_blank">
+          <a href="{{site.baseurl}}/img/honors/more/2.png" target="_blank">
             <div class="phone">
               <img src="{{site.baseurl}}/img/honors/more/2.png" alt="">
             </div>
           </a>
-          <a href="https://obaianaya.github.io/img/honors/more/3.png" target="_blank">
+          <a href="{{site.baseurl}}/img/honors/more/3.png" target="_blank">
             <div class="phone">
               <img src="{{site.baseurl}}/img/honors/more/3.png" alt="">
             </div>
