--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -4,16 +4,14 @@
 
     <div class="project screentime">
       <figure class="project__pic phones">
+        <a href="{{site.baseurl}}/img/honors/honors/" target="_blank">
           <div class="phone">
-              <a href="https://obaianaya.github.io/img/honors/honors/Grade10.png" target="_blank">
               <img src="{{site.baseurl}}/img/honors/honors/Grade10.png" alt="">
-            </a>
           </div>
           <div class="phone">
-              <a href="https://obaianaya.github.io/img/honors/honors/Grade11.png" target="_blank">
             <img src="{{site.baseurl}}/img/honors/honors/Grade11.png" alt="">
-          </a>
           </div>
+        </a>
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
@@ -27,17 +25,13 @@
 
     <div class="project screentime">
         <figure class="project__pic phones">
-          <a href="{{site.baseurl}}/img/honors/more/1.png" target="_blank">
+          <a href="{{site.baseurl}}/img/honors/more/" target="_blank">
             <div class="phone">
               <img src="{{site.baseurl}}/img/honors/more/1.png" alt="">
             </div>
-          </a>
-          <a href="{{site.baseurl}}/img/honors/more/2.png" target="_blank">
             <div class="phone">
               <img src="{{site.baseurl}}/img/honors/more/2.png" alt="">
             </div>
-          </a>
-          <a href="{{site.baseurl}}/img/honors/more/3.png" target="_blank">
             <div class="phone">
               <img src="{{site.baseurl}}/img/honors/more/3.png" alt="">
             </div>
