--- a/_includes/featured-projects2.html
+++ b/_includes/featured-projects2.html
@@ -18,6 +18,7 @@
 
     <div class="project screentime">
       <figure class="project__pic phones">
+        <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">
           <div class="phone">
             <img src="{{site.baseurl}}/img/programming/screen1.png" alt="">
           </div>
@@ -27,6 +28,7 @@
           <div class="phone">
             <img src="{{site.baseurl}}/img/programming/screen3.png" alt="">
           </div>
+        </a>
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
