--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -4,7 +4,7 @@
 
     <div class="project screentime">
       <figure class="project__pic phones">
-        <a href="{{site.baseurl}}/img/honors/honors/" target="_blank">
+        <a href="{{site.baseurl}}/img/honors/honors/Grade11.png" target="_blank">
           <div class="phone">
               <img src="{{site.baseurl}}/img/honors/honors/Grade10.png" alt="">
           </div>
@@ -15,17 +15,17 @@
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">Honors Certificates</a>
+          <strong>Honors Certificates</strong>
         </div>
-        <p>1- Certificate of Excellency for achieving <strong>97.12% in Grade 10</strong>.
-        <br>2- and on the right is a Certificate of Excellency for achieving <strong>99.44% in Grade 11</strong>.
+        <p>1- Certificate of Excellency for achieving <a href="{{site.baseurl}}/img/honors/honors/Grade10.png" target="_blank">97.12% in Grade 10</a>.
+        <br>2- and on the right is a Certificate of Excellency for achieving <a href="{{site.baseurl}}/img/honors/honors/Grade11.png" target="_blank">99.44% in Grade 11</a>.
         </p>
       </figcaption>
     </div>
 
     <div class="project screentime">
         <figure class="project__pic phones">
-          <a href="{{site.baseurl}}/img/honors/more/" target="_blank">
+          <a href="{{site.baseurl}}/img/honors/more/2.png" target="_blank">
             <div class="phone">
               <img src="{{site.baseurl}}/img/honors/more/1.png" alt="">
             </div>
@@ -39,10 +39,12 @@
         </figure>
         <figcaption class="project__caption">
           <div class="project__name">
-            <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">Extracurricular Certificates</a>
+            <strong>Extracurricular Certificates</strong>
           </div>
-          <p>Starry Station feature that provided users with the ability to easily filter content, pause the internet, and even
-            create custom rules for blocking apps like Facebook and Twitter right from their phones.</p>
+          <p>1- Overall <a href="{{site.baseurl}}/img/honors/more/1.png" target="_blank">excellent performance in grade 10</a>.
+            <br>2- Received the top <a href="{{site.baseurl}}/img/honors/more/2.png" target="_blank">library visitor</a> as I used to borrow books throughout the year.
+            <br>3- Volunteered to <a href="{{site.baseurl}}/img/honors/more/3.png" target="_blank">organize and manage the library</a>
+          </p>
         </figcaption>
       </div>
   </div>
