Update the programming section

--- a/_includes/featured-projects2.html
+++ b/_includes/featured-projects2.html
@@ -3,22 +3,21 @@
   <div class="section__content">
     <div class="project blistabloc">
       <figure class="project__pic">
-        <a href="https://blistabloc.com/" target="_blank">
-          <img src="{{site.baseurl}}/img/featured/blistabloc/blistabloc.png" alt="">
+        <a href="{{site.baseurl}}/img/programming/ml.png" target="_blank">
+          <img src="{{site.baseurl}}/img/programming/ml.png" alt="">
         </a>
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://blistabloc.com/" target="_blank">blistabloc</a>
+          <strong>Machine Learning Course</strong>
         </div>
-        <p>Custom wordpress theme built with Timber and Woocommerce for blistabloc, the only reactive shoe insert that prevents
-          blisters from forming.</p>
+        <p>Spent 20 hours of fundamental Machine Learning concepts with hands-on practice exercises.</p>
       </figcaption>
     </div>
 
     <div class="project screentime">
       <figure class="project__pic phones">
-        <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">
+        <a href="{{site.baseurl}}/img/programming/screen3.png" target="_blank">
           <div class="phone">
             <img src="{{site.baseurl}}/img/programming/screen1.png" alt="">
           </div>
@@ -32,25 +31,54 @@
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">ScreenTime 2.0</a>
+          <strong>Image-based ML Model</strong>
         </div>
-        <p>Starry Station feature that provided users with the ability to easily filter content, pause the internet, and even
-          create custom rules for blocking apps like Facebook and Twitter right from their phones.</p>
+        <p>This is a prototype for my project during the ML course. I developed an image-based Machine Learning model that categorizes food calorie level based on food images.</p>
       </figcaption>
     </div>
 
     <div class="project interventions">
       <figure class="project__pic">
-        <a href="https://interventions.design/" target="_blank">
-          <img src="{{site.baseurl}}/img/featured/interventions/interventions.png" alt="">
+        <a href="{{site.baseurl}}/img/programming/python.png" target="_blank">
+          <img src="{{site.baseurl}}/img/programming/python.png" alt="">
         </a>
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://interventions.design/" target="_blank">Interventions</a>
+          <strong>Introduction to Programming</strong>
         </div>
-        <p>Interactive marketing website for Northeastern's first annual student-led design conference, Interventions.</p>
+        <p>Completed an introductory Python course covering fundamentals and concepts of programming.
+           Successfully applied Python commands, functions, and control structures by solving puzzles and writing creative programs for tracy the turtle. </p>
       </figcaption>
     </div>
+
+    <div class="project blistabloc">
+        <figure class="project__pic">
+          <a href="{{site.baseurl}}/img/programming/minecraft.png" target="_blank">
+            <img src="{{site.baseurl}}/img/programming/minecraft.png" alt="">
+          </a>
+        </figure>
+        <figcaption class="project__caption">
+          <div class="project__name">
+            <strong>Minecraft Competition</strong>
+          </div>
+          <p>Designer and programmer a replica of the school building using minecraft.</p>
+        </figcaption>
+      </div>
+
+    <div class="project blistabloc">
+        <figure class="project__pic">
+          <a href="{{site.baseurl}}/img/programming/marvel.png" target="_blank">
+            <img src="{{site.baseurl}}/img/programming/marvel.png" alt="">
+          </a>
+        </figure>
+        <figcaption class="project__caption">
+          <div class="project__name">
+            <strong>Marvel Pilot Program</strong>
+          </div>
+          <p>Learned a holistic approach to STEM learning and completed project one and two of the curriculum.</p>
+        </figcaption>
+      </div>
+  
   </div>
 </section>
