Add academic reports

--- a/_includes/background.html
+++ b/_includes/background.html
@@ -42,11 +42,11 @@
       Learning isn't just a skill; it's a habit, even in video games.    
     </p>
     <p>
-      My big aim? Turn what I learn into a positive contribution for a better world.
+        <strong>My big aim? Turn what I learn into a positive contribution for a better world.</strong>
     </p>
 
     <p>
-      <strong>When I'm not in front of a computer screen, I'm writing, directing, and filming my ideas.</strong>
+      When I'm not in front of a computer screen, I'm writing, directing, and filming my ideas.
     </p>
 
     <!-- <a href="{{site.resume}}" target="_blank" class="arrow-link">View My Resume</a> -->
