Fix url for grades

--- a/_includes/academics.html
+++ b/_includes/academics.html
@@ -18,14 +18,14 @@
     </div>
     <!-- <a href="{{site.grades.Grade_10_1stSemester_MidtermReport.pdf}}" target="_blank" class="arrow-link">View My grades.Grade_10_1stSemester_MidtermReport.pdf</a> -->
 
-    <br><a href="{{site.baseurl}}/grades/Grade_10_1stSemester_MidtermReport.pdf}}" target="_blank">Grade 10 - 1/4 - First Semester Midterm</a></br>
-    <br><a href="{{site.baseurl}}/grades/Grade_10_1stSemester_FinalReport.pdf}}" target="_blank">Grade 10 - 2/4 - First Semester Final</a></br>
-    <br><a href="{{site.baseurl}}/grades/Grade_10_FinalReport.pdf}}" target="_blank">Grade 10 - 4/4 - Final</a></br>
+    <br><a href="{{site.baseurl}}/grades/Grade_10_1stSemester_MidtermReport.pdf" target="_blank">Grade 10 - 1/4 - First Semester Midterm</a></br>
+    <br><a href="{{site.baseurl}}/grades/Grade_10_1stSemester_FinalReport.pdf" target="_blank">Grade 10 - 2/4 - First Semester Final</a></br>
+    <br><a href="{{site.baseurl}}/grades/Grade_10_FinalReport.pdf" target="_blank">Grade 10 - 4/4 - Final</a></br>
 
-    <br><a href="{{site.baseurl}}/grades/Grade_11_1stSemester_MidtermReport.pdf}}" target="_blank">Grade 11 - 1/4 - First Semester Midterm</a></br>
-    <br><a href="{{site.baseurl}}/grades/Grade_11_1stSemester_FinalReport.pdf}}" target="_blank">Grade 11 - 2/4 - First Semester Final</a></br>
-    <br><a href="{{site.baseurl}}/grades/Grade_11_2stSemester_MidtermReport.pdf}}" target="_blank">Grade 11 - 3/4 - Second Semester Midterm</a></br>
-    <br><a href="{{site.baseurl}}/grades/Grade_11_FinalReport.pdf}}" target="_blank">Grade 11 - 4/4 - Final</a></br>
+    <br><a href="{{site.baseurl}}/grades/Grade_11_1stSemester_MidtermReport.pdf" target="_blank">Grade 11 - 1/4 - First Semester Midterm</a></br>
+    <br><a href="{{site.baseurl}}/grades/Grade_11_1stSemester_FinalReport.pdf" target="_blank">Grade 11 - 2/4 - First Semester Final</a></br>
+    <br><a href="{{site.baseurl}}/grades/Grade_11_2stSemester_MidtermReport.pdf" target="_blank">Grade 11 - 3/4 - Second Semester Midterm</a></br>
+    <br><a href="{{site.baseurl}}/grades/Grade_11_FinalReport.pdf" target="_blank">Grade 11 - 4/4 - Final</a></br>
 
   </div>
 </section>
