Update filmmaking section

--- a/_includes/featured-projects3.html
+++ b/_includes/featured-projects3.html
@@ -3,16 +3,17 @@
   <div class="section__content">
     <div class="project blistabloc">
       <figure class="project__pic">
-        <a href="https://blistabloc.com/" target="_blank">
-          <img src="{{site.baseurl}}/img/featured/blistabloc/blistabloc.png" alt="">
+        <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">
+          <img src="{{site.baseurl}}/img/filmmaking/personality.png" alt="">
         </a>
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://blistabloc.com/" target="_blank">blistabloc</a>
+          <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">Personality</a>
         </div>
-        <p>Custom wordpress theme built with Timber and Woocommerce for blistabloc, the only reactive shoe insert that prevents
-          blisters from forming.</p>
+        <p>Personality is my first ever movie which secured a first place winning film among five competing films.
+          <br> Personality is a psychological/horror short film.
+          I was the director, writer, editor and cameraman</p>
       </figcaption>
     </div>
 
