--- a/_includes/featured-projects3.html
+++ b/_includes/featured-projects3.html
@@ -17,41 +17,88 @@
       </figcaption>
     </div>
 
-    <div class="project screentime">
-      <figure class="project__pic phones">
-        <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">
-          <div class="phone">
-            <img src="{{site.baseurl}}/img/honors/honors/Grade10.png" alt="">
-          </div>
-          <div class="phone">
-            <img src="{{site.baseurl}}/img/honors/honors/Grade11.png" alt="">
-          </div>
-          <div class="phone">
-            <img src="{{site.baseurl}}/img/featured/screentime/screentime4.png" alt="">
-          </div>
+    <div class="project blistabloc">
+      <figure class="project__pic">
+        <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">
+          <img src="{{site.baseurl}}/img/filmmaking/personality.png" alt="">
         </a>
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">ScreenTime 2.0</a>
+          <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">Filmmaking Course</a>
         </div>
-        <p>Starry Station feature that provided users with the ability to easily filter content, pause the internet, and even
-          create custom rules for blocking apps like Facebook and Twitter right from their phones.</p>
+        <p>Personality is my first ever movie which secured a first place winning film among five competing films.
+          <br> Personality is a psychological/horror short film.
+          I was the director, writer, editor and cameraman</p>
       </figcaption>
     </div>
 
-    <div class="project interventions">
+    <div class="project blistabloc">
       <figure class="project__pic">
-        <a href="https://interventions.design/" target="_blank">
-          <img src="{{site.baseurl}}/img/featured/interventions/interventions.png" alt="">
+        <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">
+          <img src="{{site.baseurl}}/img/filmmaking/personality.png" alt="">
         </a>
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://interventions.design/" target="_blank">Interventions</a>
+          <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">Ajyal Juror</a>
         </div>
-        <p>Interactive marketing website for Northeastern's first annual student-led design conference, Interventions.</p>
+        <p>Personality is my first ever movie which secured a first place winning film among five competing films.
+          <br> Personality is a psychological/horror short film.
+          I was the director, writer, editor and cameraman</p>
       </figcaption>
     </div>
+
+    <div class="project blistabloc">
+      <figure class="project__pic">
+        <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">
+          <img src="{{site.baseurl}}/img/filmmaking/personality.png" alt="">
+        </a>
+      </figure>
+      <figcaption class="project__caption">
+        <div class="project__name">
+          <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">Personality</a>
+        </div>
+        <p>Personality is my first ever movie which secured a first place winning film among five competing films.
+          <br> Personality is a psychological/horror short film.
+          I was the director, writer, editor and cameraman</p>
+      </figcaption>
+    </div>
+
+    <div class="project screentime">
+      <figure class="project__pic phones">
+        <a href="{{site.baseurl}}/img/filmmaking/5.png" target="_blank">
+          <div class="phone">
+            <img src="{{site.baseurl}}/img/filmmaking/4.png" alt="">
+          </div>
+          <div class="phone">
+            <img src="{{site.baseurl}}/img/filmmaking/5.png" alt="">
+          </div>
+        </a>
+      </figure>
+      <figcaption class="project__caption">
+        <div class="project__name">
+          <strong>Where The Worlds Meet</strong>
+        </div>
+        <p>Where The Worlds Meet is an award-winning short story about the World Cup 2022.</p>
+      </figcaption>
+    </div>
+
+    <div class="project blistabloc">
+      <figure class="project__pic">
+        <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">
+          <img src="{{site.baseurl}}/img/filmmaking/personality.png" alt="">
+        </a>
+      </figure>
+      <figcaption class="project__caption">
+        <div class="project__name">
+          <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">Critical Reading</a>
+        </div>
+        <p>Personality is my first ever movie which secured a first place winning film among five competing films.
+          <br> Personality is a psychological/horror short film.
+          I was the director, writer, editor and cameraman</p>
+      </figcaption>
+    </div>
+
   </div>
 </section>
