--- a/_includes/featured-projects3.html
+++ b/_includes/featured-projects3.html
@@ -19,13 +19,13 @@
 
     <div class="project blistabloc">
       <figure class="project__pic">
-        <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">
-          <img src="{{site.baseurl}}/img/filmmaking/personality.png" alt="">
+        <a href="{{site.baseurl}}/img/filmmaking/1.png" target="_blank">
+          <img src="{{site.baseurl}}/img/filmmaking/1.png" alt="">
         </a>
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">Filmmaking Course</a>
+          <strong>Filmmaking Course</strong>
         </div>
         <p>Personality is my first ever movie which secured a first place winning film among five competing films.
           <br> Personality is a psychological/horror short film.
@@ -35,13 +35,13 @@
 
     <div class="project blistabloc">
       <figure class="project__pic">
-        <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">
-          <img src="{{site.baseurl}}/img/filmmaking/personality.png" alt="">
+        <a href="{{site.baseurl}}/img/filmmaking/2.png" target="_blank">
+          <img src="{{site.baseurl}}/img/filmmaking/2.png" alt="">
         </a>
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">Ajyal Juror</a>
+          <strong>Ajyal Juror</strong>
         </div>
         <p>Personality is my first ever movie which secured a first place winning film among five competing films.
           <br> Personality is a psychological/horror short film.
@@ -49,30 +49,15 @@
       </figcaption>
     </div>
 
-    <div class="project blistabloc">
-      <figure class="project__pic">
-        <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">
-          <img src="{{site.baseurl}}/img/filmmaking/personality.png" alt="">
-        </a>
-      </figure>
-      <figcaption class="project__caption">
-        <div class="project__name">
-          <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">Personality</a>
-        </div>
-        <p>Personality is my first ever movie which secured a first place winning film among five competing films.
-          <br> Personality is a psychological/horror short film.
-          I was the director, writer, editor and cameraman</p>
-      </figcaption>
-    </div>
 
     <div class="project screentime">
       <figure class="project__pic phones">
-        <a href="{{site.baseurl}}/img/filmmaking/5.png" target="_blank">
+        <a href="{{site.baseurl}}/img/filmmaking/4.png" target="_blank">
           <div class="phone">
-            <img src="{{site.baseurl}}/img/filmmaking/4.png" alt="">
+            <img src="{{site.baseurl}}/img/filmmaking/3.png" alt="">
           </div>
           <div class="phone">
-            <img src="{{site.baseurl}}/img/filmmaking/5.png" alt="">
+            <img src="{{site.baseurl}}/img/filmmaking/4.png" alt="">
           </div>
         </a>
       </figure>
@@ -86,13 +71,29 @@
 
     <div class="project blistabloc">
       <figure class="project__pic">
-        <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">
-          <img src="{{site.baseurl}}/img/filmmaking/personality.png" alt="">
+        <a href="{{site.baseurl}}/img/filmmaking/5.png" target="_blank">
+          <img src="{{site.baseurl}}/img/filmmaking/5.png" alt="">
         </a>
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">Critical Reading</a>
+          <strong>Theatre Actor</strong>
+        </div>
+        <p>Personality is my first ever movie which secured a first place winning film among five competing films.
+          <br> Personality is a psychological/horror short film.
+          I was the director, writer, editor and cameraman</p>
+      </figcaption>
+    </div>
+
+    <div class="project blistabloc">
+      <figure class="project__pic">
+        <a href="{{site.baseurl}}/img/filmmaking/6.png" target="_blank">
+          <img src="{{site.baseurl}}/img/filmmaking/6.png" alt="">
+        </a>
+      </figure>
+      <figcaption class="project__caption">
+        <div class="project__name">
+          <strong>Critical Reading</strong>
         </div>
         <p>Personality is my first ever movie which secured a first place winning film among five competing films.
           <br> Personality is a psychological/horror short film.
