--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -17,8 +17,8 @@
         <div class="project__name">
           <strong>Honors Certificates</strong>
         </div>
-        <p>1- Certificate of Excellency for achieving <a href="{{site.baseurl}}/img/honors/honors/Grade10.png" target="_blank">97.12% in Grade 10</a>.
-        <br>2- and on the right is a Certificate of Excellency for achieving <a href="{{site.baseurl}}/img/honors/honors/Grade11.png" target="_blank">99.44% in Grade 11</a>.
+        <p>1- Certificate of Excellency for achieving <a href="{{site.baseurl}}/img/honors/honors/Grade10.png" target="_blank" class="highlight-link">97.12% in Grade 10</a>.
+        <br>2- and on the right is a Certificate of Excellency for achieving <a href="{{site.baseurl}}/img/honors/honors/Grade11.png" target="_blank" class="highlight-link">99.44% in Grade 11</a>.
         </p>
       </figcaption>
     </div>
