--- a/_includes/featured-projects2.html
+++ b/_includes/featured-projects2.html
@@ -62,7 +62,7 @@
           <div class="project__name">
             <strong>Minecraft Competition</strong>
           </div>
-          <p>Designer and programmer a replica of the school building using minecraft.</p>
+          <p>Designed and programmed a replica of the school building using minecraft.</p>
         </figcaption>
       </div>
 
@@ -77,6 +77,14 @@
             <strong>Marvel Pilot Program</strong>
           </div>
           <p>Learned a holistic approach to STEM learning and completed project one and two of the curriculum.</p>
+          <br>
+          <h3 class="intro__contact">
+            <span>View my cool project </span>
+            <span class="emoji pointer"></span>
+            <span>
+              <a class="underline-link" href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">Link</a>
+            </span>
+          </h3>
         </figcaption>
       </div>
   
