Test underline link

--- a/_includes/featured-projects2.html
+++ b/_includes/featured-projects2.html
@@ -76,15 +76,10 @@
           <div class="project__name">
             <strong>Marvel Pilot Program</strong>
           </div>
-          <p>Learned a holistic approach to STEM learning and completed project one and two of the curriculum.</p>
+          <p>Learned a holistic approach to STEM learning and completed project one and two of the curriculum.
           <br>
-          <h3 class="intro__contact">
-            <span>View my cool project </span>
-            <span class="emoji pointer"></span>
-            <span>
-              <a class="underline-link" href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">Link</a>
-            </span>
-          </h3>
+          <a class="underline-link" href="https://youtu.be/c7F1gHzV1jc?feature=shared" target="_blank">Link</a>
+          </p>
         </figcaption>
       </div>
   
