--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -6,7 +6,7 @@
       <figure class="project__pic phones">
         <a href="{{site.baseurl}}/img/honors/honors/Grade11.png" target="_blank">
           <div class="phone">
-              <img src="{{site.baseurl}}/img/honors/honors/Grade10.png" alt="">
+              <a href="{{site.baseurl}}/img/honors/honors/Grade10.png" target="_blank"><img src="{{site.baseurl}}/img/honors/honors/Grade10.png" alt=""></a>
           </div>
           <div class="phone">
             <img src="{{site.baseurl}}/img/honors/honors/Grade11.png" alt="">
