--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -6,7 +6,7 @@
       <figure class="project__pic phones">
         <a href="{{site.baseurl}}/img/honors/honors/Grade11.png" target="_blank">
           <div class="phone">
-              <a href="{{site.baseurl}}/img/honors/honors/Grade10.png" target="_blank"><img src="{{site.baseurl}}/img/honors/honors/Grade10.png" alt=""></a>
+              <img src="{{site.baseurl}}/img/honors/honors/Grade10.png" alt="">
           </div>
           <div class="phone">
             <img src="{{site.baseurl}}/img/honors/honors/Grade11.png" alt="">
@@ -18,8 +18,8 @@
           <strong>Honors Certificates</strong>
         </div>      
 
-        <p>1- Certificate of Excellency for achieving <a class="underline-link" href="{{site.baseurl}}/img/honors/honors/Grade10.png" target="_blank">97.12% in Grade 10</a>.
-        <br>2- and on the right is a Certificate of Excellency for achieving <a class="underline-link"  href="{{site.baseurl}}/img/honors/honors/Grade11.png" target="_blank">99.44% in Grade 11</a>.
+        <p>1- Certificate of Excellency for achieving <a href="{{site.baseurl}}/img/honors/honors/Grade10.png" target="_blank">97.12% in Grade 10</a>.
+        <br>2- and on the right is a Certificate of Excellency for achieving <a href="{{site.baseurl}}/img/honors/honors/Grade11.png" target="_blank">99.44% in Grade 11</a>.
         </p>
       </figcaption>
     </div>
@@ -42,9 +42,9 @@
           <div class="project__name">
             <strong>Extracurricular Certificates</strong>
           </div>
-          <p>1- Overall <a class="underline-link" href="{{site.baseurl}}/img/honors/more/1.png" target="_blank">excellent performance in grade 10</a>.
-            <br>2- Received the top <a class="underline-link" href="{{site.baseurl}}/img/honors/more/2.png" target="_blank">library visitor</a> as I used to borrow books throughout the year.
-            <br>3- Volunteered to <a class="underline-link" href="{{site.baseurl}}/img/honors/more/3.png" target="_blank">organize and manage the library</a>
+          <p>1- Overall <a href="{{site.baseurl}}/img/honors/more/1.png" target="_blank">excellent performance in grade 10</a>.
+            <br>2- Received the top <a href="{{site.baseurl}}/img/honors/more/2.png" target="_blank">library visitor</a> as I used to borrow books throughout the year.
+            <br>3- Volunteered to <a href="{{site.baseurl}}/img/honors/more/3.png" target="_blank">organize and manage the library</a>
           </p>
         </figcaption>
       </div>
