--- a/_includes/featured-projects2.html
+++ b/_includes/featured-projects2.html
@@ -79,6 +79,9 @@
           <p>Learned a holistic approach to STEM learning and completed project one and two of the curriculum.
           <br>
           <a class="underline-link" href="https://youtu.be/c7F1gHzV1jc?feature=shared" target="_blank">Link</a>
+          <a href="https://youtu.be/c7F1gHzV1jc?feature=shared" target="_blank" class="arrow-link">Link2</a>
+          <a href="https://youtu.be/c7F1gHzV1jc?feature=shared" target="_blank">Get in touch </a>
+          <span class="emoji pointer"></span>
           </p>
         </figcaption>
       </div>
