--- a/_includes/featured-projects2.html
+++ b/_includes/featured-projects2.html
@@ -78,10 +78,13 @@
           </div>
           <p>Learned a holistic approach to STEM learning and completed project one and two of the curriculum.
           <br>
-          <a class="underline-link" href="https://youtu.be/c7F1gHzV1jc?feature=shared" target="_blank">Link</a>
-          <a href="https://youtu.be/c7F1gHzV1jc?feature=shared" target="_blank" class="arrow-link">Link2</a>
-          <a href="https://youtu.be/c7F1gHzV1jc?feature=shared" target="_blank">Get in touch </a>
-          <span class="emoji pointer"></span>
+
+          <h3 class="intro__contact">
+              <span class="emoji pointer"></span>
+              <span>
+                <a href="https://youtu.be/c7F1gHzV1jc?feature=shared" target="_blank" class="highlight-link">Project</a>
+              </span>
+            </h3>
           </p>
         </figcaption>
       </div>
