--- a/_includes/featured-projects2.html
+++ b/_includes/featured-projects2.html
@@ -66,6 +66,11 @@
         </figcaption>
       </div>
 
+      <video width="320" height="240" controls>
+          <source src="https://youtu.be/c7F1gHzV1jc?feature=shared" type="video/mp4">
+        Your browser does not support the video tag.
+        </video>
+
     <div class="project blistabloc">
         <figure class="project__pic">
           <a href="{{site.baseurl}}/img/programming/marvel.png" target="_blank">
@@ -87,6 +92,11 @@
             </h3>
           </p>
         </figcaption>
+
+        <video width="320" height="240" controls>
+            <source src="https://youtu.be/c7F1gHzV1jc?feature=shared" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
       </div>
   
   </div>
