--- a/_includes/featured-projects2.html
+++ b/_includes/featured-projects2.html
@@ -98,6 +98,10 @@
           Your browser does not support the video tag.
           </video>
       </div>
+
+      <iframe width="420" height="315"
+src="https://www.youtube.com/embed/tgbNymZ7vqY">
+</iframe>
   
   </div>
 </section>
